--- a/about.html
+++ b/about.html
@@ -170,7 +170,7 @@
 				<div class="col-lg-12 col-xl-6">
 					<div class="about-one-image">
 						<img src="assets/image/shapes/shape-1.png" class="floated-image-one" alt="img-58">
-						<img src="assets/image/gallery/assembly.jpg" alt="img-59" class="img-fluid">
+						<img src="assets/image/gallery/assembly.png" alt="img-59" class="img-fluid">
 					</div><!--about-one-image-->
 				</div><!--col-lg-6-->
 			</div><!-- row -->
