fixed broken links and navigation

--- a/contact.html
+++ b/contact.html
@@ -124,7 +124,7 @@
 		<div class="container">
 			<div class="page-breadcrumbs">
 				<ul class="list-unstyled">
-					<li><a href="index-2.html">Home</a></li>
+					<li><a href="index.html">Home</a></li>
 					<li>Contact</li>
 				</ul><!-- list-unstyled -->
 			</div><!-- page-breadcrumbs -->
@@ -233,7 +233,7 @@
 			<div class="row">
 				<div class="col-lg-4">
 					<div class="footer-widget-logo">
-						<a href="index-2.html"><img src="assets/image/ekha-logo-light.png" class="img-fluid" alt="img-25"></a>
+						<a href="index.html"><img src="assets/image/ekha-logo-light.png" class="img-fluid" alt="img-25"></a>
 					</div><!-- footer-widget-logo -->
 					<div class="footer-widget-text">
 						<p>Responsive and Responsible Legislation</p>
@@ -313,7 +313,7 @@
 			<span></span>
 		</a><!-- mobile-nav-close -->
 		<div class="logo-box">
-			<a href="index-2.html"><img src="assets/image/ekha-logo-light.png" width="160" height="40" alt="204"></a>
+			<a href="index.html"><img src="assets/image/ekha-logo-light.png" width="160" height="40" alt="204"></a>
 		</div><!-- logo-box -->
 		<div class="mobile-nav-container"></div><!-- mobile-nav-container -->
 		<ul class="mobile-nav-contact list-unstyled">
