--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 			</div><!-- topbar-left -->
 			<!-- <div class="topbar-right">
 				<ul>
-					<li><a href="department-details.html">Council</a></li>
+					<li><a href="">Council</a></li>
 					<li><a href="departments.html">Government</a></li>
 					<li><a href="contact.html">Complaints</a></li>
 				</ul>
@@ -202,7 +202,7 @@
 				<div class="col-lg-12">
 					<div class="cta-one-content text-center">
 						<h2 class="section-title text-white">The Ekiti State House of Assembly is the state legislature of Ekiti State</h2>
-						<a href="#" class="btn btn-primary">About us</a> &nbsp; &nbsp; &nbsp; &nbsp; 
+						<a href="about.html" class="btn btn-primary">About us</a> &nbsp; &nbsp; &nbsp; &nbsp; 
 						<a href="#" class="btn btn-primary">Plan a visit</a>
 					</div><!-- cta-one-content -->
 				</div><!-- col-lg-12 -->
@@ -319,7 +319,7 @@
 			<div class="row">
 				<div class="col-lg-4">
 					<div class="footer-widget-logo">
-						<a href="index-2.html"><img src="assets/image/ekha-logo-light.png" class="img-fluid" alt="img-25"></a>
+						<a href="index.html"><img src="assets/image/ekha-logo-light.png" class="img-fluid" alt="img-25"></a>
 					</div><!-- footer-widget-logo -->
 					<div class="footer-widget-text">
 						<p>Responsive and Responsible Legislation</p>
@@ -336,11 +336,11 @@
 						<div class="footer-widget-explore">
 							<h4 class="footer-widget-title">Explore</h4>
 							<ul class="list-unstyled">
-								<li><a href="department-details.html">Administration</a></li>
-								<li><a href="service-details.html">Fire Services</a></li>
-								<li><a href="event-details.html">Business & Taxation</a></li>
-								<li><a href="team-details.html">Circular’s And Go’s</a></li>
-								<li><a href="contact.html">Contact Us</a></li>
+								<li><a href="#">House Members</a></li>
+								<li><a href="#">About us</a></li>
+								<li><a href="#">Bills</a></li>
+								<li><a href="#">News & Publication</a></li>
+								<li><a href="#">Contact Us</a></li>
 							</ul><!-- list-unstyled -->
 						</div><!-- footer-widget-explore -->
 					</div><!--footer-widget-->
@@ -441,6 +441,4 @@
 <script src="assets/vendor/jquery-validation/jquery.validate.min.js"></script>
 <script src="assets/js/theme.js"></script>
 </body>
-
-<!-- Mirrored from webdevcode.com/html/towngov/ by HTTrack Website Copier/3.x [XR&CO'2014], Sat, 06 Jan 2024 10:25:39 GMT -->
 </html>
