--- a/about.html
+++ b/about.html
@@ -81,7 +81,7 @@
 		<div class="main-menu-inner">
 			<div class="main-menu-left">
 				<div class="main-menu-logo">
-					<a href="index-2.html"><img src="assets/image/ekha-logo.png" alt="img-145" width="200"></a>
+					<a href="index.html"><img src="assets/image/ekha-logo.png" alt="img-145" width="200"></a>
 				</div><!--main-menu-logo-->
 				<div class="navigation">
 					<ul class="main-menu-list list-unstyled">
@@ -131,7 +131,7 @@
 		<div class="container">
 			<div class="page-breadcrumbs">
 				<ul class="list-unstyled">
-					<li><a href="index-2.html">Home</a></li>
+					<li><a href="index.html">Home</a></li>
 					<li>About</li>
 				</ul><!-- list-unstyled -->
 			</div><!-- page-breadcrumbs -->
@@ -589,7 +589,7 @@
 			<div class="row">
 				<div class="col-lg-4">
 					<div class="footer-widget-logo">
-						<a href="index-2.html"><img src="assets/image/ekha-logo-light.png" class="img-fluid" alt="img-25"></a>
+						<a href="index.html"><img src="assets/image/ekha-logo-light.png" class="img-fluid" alt="img-25"></a>
 					</div><!-- footer-widget-logo -->
 					<div class="footer-widget-text">
 						<p>Responsive and Responsible Legislation</p>
@@ -669,7 +669,7 @@
 			<span></span>
 		</a><!-- mobile-nav-close -->
 		<div class="logo-box">
-			<a href="index-2.html"><img src="assets/image/ekha-logo-light.png" width="160" height="40" alt="204"></a>
+			<a href="index.html"><img src="assets/image/ekha-logo-light.png" width="160" height="40" alt="204"></a>
 		</div><!-- logo-box -->
 		<div class="mobile-nav-container"></div><!-- mobile-nav-container -->
 		<ul class="mobile-nav-contact list-unstyled">
@@ -703,21 +703,21 @@
 			<span></span>
 		</a><!-- mobile-nav-close -->
 		<div class="logo-box">
-			<a href="index-2.html"><img src="assets/image/logo-light.png" width="160" height="72" alt=""></a>
+			<a href="index.html"><img src="assets/image/logo-light.png" width="160" height="72" alt=""></a>
 		</div><!-- logo-box -->
 		<div class="mobile-nav-container"></div><!-- mobile-nav-container -->
 		<ul class="mobile-nav-contact list-unstyled">
 			<li>
 				<i class="fa-solid fa-phone"></i>
-				<a href="tel:+8898006802">+ 88 ( 9800 ) 6802</a>
+				<a href="tel:+2348063279257">+234 8063279257</a>
 			</li><!-- li -->
 			<li>
 				<i class="fa-solid fa-envelope"></i>
-				<a href="mailto:needhelp@company.com">needhelp@company.com</a>
+				<a href="mailto:ekha@ekitistate.gov.ng">ekha@ekitistate.gov.ng</a>
 			</li><!-- li -->
 			<li>
 				<i class="fa-solid fa-map-marker-alt"></i>
-				88 Broklyn Golden Road Street <br> New York. USA
+				House of Assembly Commission,Assembly Complex, Secretariat, Ado-Ekiti
 			</li><!-- li -->
 		</ul><!-- mobile-nav-contact -->
 		<ul class="mobile-nav-social list-unstyled">
@@ -750,6 +750,4 @@
 <script src="assets/vendor/youtube-popup/youtube-popup.jquery.js"></script>
 <script src="assets/js/theme.js"></script>
 </body>
-
-<!-- Mirrored from webdevcode.com/html/towngov/about.html by HTTrack Website Copier/3.x [XR&CO'2014], Sat, 06 Jan 2024 10:26:05 GMT -->
 </html>
