fixed duplicate url and broken links

--- a/about.html
+++ b/about.html
@@ -607,10 +607,10 @@
 							<h4 class="footer-widget-title">Explore</h4>
 							<ul class="list-unstyled">
 								<li><a href="#">House Members</a></li>
-								<li><a href="#">About us</a></li>
+								<li><a href="about.html">About us</a></li>
 								<li><a href="#">Bills</a></li>
 								<li><a href="#">News & Publication</a></li>
-								<li><a href="#">Contact Us</a></li>
+								<li><a href="contact.html">Contact Us</a></li>
 							</ul><!-- list-unstyled -->
 						</div><!-- footer-widget-explore -->
 					</div><!--footer-widget-->
@@ -703,7 +703,7 @@
 			<span></span>
 		</a><!-- mobile-nav-close -->
 		<div class="logo-box">
-			<a href="index.html"><img src="assets/image/logo-light.png" width="160" height="72" alt=""></a>
+			<a href="index-2.html"><img src="assets/image/ekha-logo-light.png" width="160" height="40" alt="204"></a>
 		</div><!-- logo-box -->
 		<div class="mobile-nav-container"></div><!-- mobile-nav-container -->
 		<ul class="mobile-nav-contact list-unstyled">
