--- a/index.html
+++ b/index.html
@@ -337,24 +337,10 @@
 							<h4 class="footer-widget-title">Explore</h4>
 							<ul class="list-unstyled">
 								<li><a href="#">House Members</a></li>
-								<li><a href="#">About us</a></li>
+								<li><a href="about.html">About us</a></li>
 								<li><a href="#">Bills</a></li>
 								<li><a href="#">News & Publication</a></li>
-								<li><a href="#">Contact Us</a></li>
-							</ul><!-- list-unstyled -->
-						</div><!-- footer-widget-explore -->
-					</div><!--footer-widget-->
-				</div><!--col-lg-3-->
-				<div class="col-lg-3">
-					<div class="footer-widget">
-						<div class="footer-widget-explore">
-							<h4 class="footer-widget-title">Explore</h4>
-							<ul class="list-unstyled">
-								<li><a href="#">House Members</a></li>
-								<li><a href="#">About us</a></li>
-								<li><a href="#">Bills</a></li>
-								<li><a href="#">News & Publication</a></li>
-								<li><a href="#">Contact Us</a></li>
+								<li><a href="contact.html">Contact Us</a></li>
 							</ul><!-- list-unstyled -->
 						</div><!-- footer-widget-explore -->
 					</div><!--footer-widget-->
