--- a/contact.html
+++ b/contact.html
@@ -75,7 +75,7 @@
 		<div class="main-menu-inner">
 			<div class="main-menu-left">
 				<div class="main-menu-logo">
-					<a href="index-2.html"><img src="assets/image/ekha-logo.png" alt="img-145" width="200"></a>
+					<a href="index.html"><img src="assets/image/ekha-logo.png" alt="img-145" width="200"></a>
 				</div><!--main-menu-logo-->
 				<div class="navigation">
 					<ul class="main-menu-list list-unstyled">
