updated image for house member

--- a/about.html
+++ b/about.html
@@ -197,7 +197,7 @@
 				<div class="col-12 col-md-6 col-xl-3">
 					<div class="team-card">
 						<div class="team-card-img">
-							<img src="assets/image/team/RT. HON. ARIBASOYE STEPHEN ADEOYE.jpg" class="img-fluid" alt="img-67">
+							<img src="assets/image/team/Hon. Adeoye Stephen.jpg" class="img-fluid" alt="img-67">
 						</div><!-- team-card-img -->
 						<div class="team-card-content">
 							<h4><a href="#"> Rt. Hon Aribasoye Stephen Adeoye</a></h4>
